ocp-test/matomo-log-analytics.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"matomo-log-analytics:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"matomo-log-analytics\")].image"}]
    openshift.io/generated-by: OpenShiftNewApp
  name: matomo-log-analytics
  namespace: annif
  labels:
    app: matomo-log-analytics
    app.kubernetes.io/component: matomo-log-analytics
    app.kubernetes.io/instance: matomo-log-analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: matomo-log-analytics
  template:
    spec:
      containers:
        - name: matomo-log-analytics
          image: >-
            image-registry.openshift-image-registry.svc:5000/annif/matomo-log-analytics@sha256:d831724ce9d483517bbfcbdb4108e5a5ed265ec57751cdb4043b6d82602802e0
          command: ["/bin/sh", "-c"]
          args:
            - tail -f /logs/nginx-access.log | python /opt/app-root/src/import_logs.py
              --url=https://tilasto.lib.helsinki.fi
              --idsite=15
              --token-auth $(MATOMO-TOKEN)
              --enable-http-errors
              --enable-http-redirects
              --enable-static
              --enable-bots
              --track-http-method true
              --recorder-max-payload-size=10 -
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      
          volumeMounts:
            - name: logs
              mountPath: /logs
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs
            readOnly: True

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
